# PitPredict

./: .gitignore  DNF_FEATURES.md  INTEGRATION_STATUS.py  Makefile  README.md  build_f1_dataset.py  build_lap_by_lap_dataset.py  config.yaml  doku.md  get_data.py  predict_2025.py  predict_example.py  predict_future_race.py  pyproject.toml  requirements.txt  test.py  test_laps.py
app/: README.md  pitpredict_app.py  pitpredict_app_new.py  pitpredict_app_old.py  requirements.txt
docs/: FINAL_POSITION_API.md  FINAL_POSITION_MODEL.md  PITSTOP_MODEL_SUMMARY.md  doku.md
notebooks/: EDA_Round5.ipynb
plots/: plot.py
src/: EDA_Round5.ipynb  build_lap_by_lap_dataset.py  predict_2025.py  predict_future_race.py
src/pitpredict/: __init__.py  cli.py  etl_driver_race.py
src/pitpredict/features/: __init__.py  data_overview.py
src/pitpredict/io/: __init__.py
src/pitpredict/models/: final_position_predict.py  future_position_predict.py  pit_predict.py  train_dnf.py
src/pitpredict/viz/: __init__.py
tests/: predict_example.py  test_final_position_model.py  test_laps.py  test_pit_model.py
